syntax = "proto3";

package testapis.basic.empty;

message EmptyMessage {}
